client/src/assets/stylesheets/pages/viewAll.scss
@import '_presets.scss';

.view-all-container {
  width: 95%;
  max-width: 800px;
  margin: auto;

  .view-all-header {
    width: 100%;
    margin-top: 1rem;

    h1 {
      display: inline-block;
    }

    a {
      margin-top: 0.55rem;
      margin-left: 0.5em;
      float: right;
    }
  }

  .profile-section-header {
    display: flex;

    .profile-section-title-and-description {
      flex-grow: 2;

      .profile-section-title {
        margin-bottom: 0.5em;
      }
    }

    .profile-section-button {
      flex-shrink: 1;
    }
  }

  h5 {
    font-size: 0.75em;
    text-transform: uppercase;
    color: $gray-4;
    margin-top: 0.5em;
  }
}

